홈페이지 업로드

--- a/blog_list.html
+++ b/blog_list.html
@@ -95,8 +95,8 @@
                     <div class="card mb-4">
                         <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
                         <div class="card-body">
-                        <h2 class="card-title">채성욱 블로그 만들다</h2>
-                        <p class="card-text">안녕하세요. 이번에 고급웹프로그래밍 수업을 통해 블로그페이지를 만들어보게되었습니다. 너무 기대가 됩니다!!!</p>
+                        <h2 class="card-title">디기경 블로그 만들다</h2>
+                        <p class="card-text">안녕하세요. 이번에 수업을 통해 블로그페이지를 만들어보게되었습니다. 너무 기대가 됩니다!!!</p>
                         <a href="#" class="btn btn-primary">Read More &rarr;</a>
                         </div>
                         <div class="card-footer text-muted">
