--- a/about_me.html
+++ b/about_me.html
@@ -56,7 +56,7 @@
         <div class="row my-3">
           <div class="col-9">
             <h1>About Me</h1>
-            <h2>천안사람 채성욱입니다. </h2>
+            <h2>천안사람 디기경입니다. </h2>
             <p>HTML, CSS, JS, Django로 재미있는 웹사이트 만드는 것을 좋아합니다. </p>
             <p>우리 같이 재미있게 수업해요.</p>
             <hr/>
